force-app/main/default/objects/Mood_Entry__c/Mood_Entry__c.object-meta.xml
<CustomObject>
    <description>Stores 3x daily mood tracking entries linked to Daily_Routine__c for PWA sync</description>
    <label>Mood Entry</label>
    <pluralLabel>Mood Entries</pluralLabel>
    <nameField>
        <displayFormat>ME-{0000}</displayFormat>
        <label>Mood Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>