force-app/main/default/objects/Mood_Entry__c/fields/Energy_Score__c.field-meta.xml
<CustomField>
    <fullName>Energy_Score__c</fullName>
    <label>Energy Score</label>
    <description>Energy rating from 1-10</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>