force-app/main/default/objects/Mood_Entry__c/fields/Mood_Score__c.field-meta.xml
<CustomField>
    <fullName>Mood_Score__c</fullName>
    <label>Mood Score</label>
    <description>Mood rating from 1-10</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>