force-app/main/default/objects/Mood_Entry__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <description>Optional notes about mood or context</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>