force-app/main/default/objects/Mood_Entry__c/fields/Time_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Day__c</fullName>
    <label>Time of Day</label>
    <description>When the mood was logged (Morning/Midday/Evening)</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Midday</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>