force-app/main/default/objects/Mood_Entry__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <description>Exact time when mood was logged (for sync conflict resolution)</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>